kubernetes/homebridge/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homebridge
spec:
  selector:
    app: homebridge
  ports:
    - name: web
      port: 8581
      targetPort: 8581
      protocol: TCP
