kubernetes/homebridge/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: homebridge-web
spec:
  parentRefs:
    - name: homelab
      namespace: gateway
      sectionName: https-homebridge
  hostnames:
    - homebridge.pabpereza.dev
  rules:
    - filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: local-only
      matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: homebridge
          port: 8581
